@@ -1,3 +1,10 @@
+2005-06-09  Michael Cadilhac  <michael.cadilhac@lrde.epita.fr>
+
+	* parser.y: Add `#line' directives output on `%include', CODE and
+	in `yyparsetail'.
+	* monoburg.c: Add `#line' directives output just before the call to
+	`yyparse'.
+
 2005-06-04  Michael Cadilhac  <michael.cadilhac@lrde.epita.fr>
 
 	* config.h.in: New.
